--- a/PSY_INS.ipynb
+++ b/PSY_INS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZQbyfjTdRYarMfsx+XPo/",
+      "authorship_tag": "ABX9TyNfh4M5n7NNhjY96JvA7AKl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 35,
       "metadata": {
         "id": "f7-pwE8dr2jb"
       },
@@ -101,10 +101,18 @@
           "height": 1000
         },
         "id": "ZfyciiNhsPSQ",
-        "outputId": "f335d128-6dc9-4ace-a058-3bd727840837"
+        "outputId": "532f2ec6-7692-4e87-fd28-ab196798c6f0"
       },
-      "execution_count": 2,
+      "execution_count": 78,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-78-caeaaf10cef1>:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+            "  X = data.drop('Disorder', axis=1).replace({'yes': 1, 'no': 0}).infer_objects()\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -161,9 +169,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JPRh-70qsYok",
-        "outputId": "f4085801-b9b7-49ec-e1f9-c99b83fdd71b"
+        "outputId": "55e2124d-7d7b-426d-aa57-d836c0ee88b1"
       },
-      "execution_count": 3,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +200,7 @@
         "    'K-Nearest Neighbors': KNeighborsClassifier(),\n",
         "}\n",
         "for name, model in models.items():\n",
-        "    model.fit(X_train_selected_scaled, y_train)\n",
+        "    model.fit(X_train_selected_scaled, y_train)  # Use the selected features (X_train_selected)\n",
         "    print(f\"{name} model trained.\")\n"
       ],
       "metadata": {
@@ -200,9 +208,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SKCrSIb2scIj",
-        "outputId": "0c78e347-7b0b-452f-e89b-9e5ad097b49e"
+        "outputId": "e94c9d5c-ce84-40be-af9f-bf74fe30af08"
       },
-      "execution_count": 4,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,15 +242,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JDNbf6QptG1s",
-        "outputId": "402682b7-633d-40f7-d3e0-faf156b8a71b"
+        "outputId": "ddcaf8fa-dcc3-4cc0-8cba-3746cee23254"
       },
-      "execution_count": 5,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SVM Performance:\n",
+            "Linear SVC Performance:\n",
             "Accuracy: 1.0\n",
             "Precision: 1.0\n",
             "Recall: 1.0\n",
@@ -269,8 +277,71 @@
     {
       "cell_type": "code",
       "source": [
-        "best_model_name = max(models, key=lambda name: f1_score(y_test, models[name].predict(X_test_selected_scaled), average='weighted'))\n",
-        "print(f\"Best Model: {best_model_name}\")\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "for name, model in models.items():\n",
+        "    y_pred = model.predict(X_test_selected_scaled)\n",
+        "    print(f\"{name} Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RHUU_CvUk4Wp",
+        "outputId": "d4e67ffd-f165-48d6-d9bd-2130348c8e17"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SVM Confusion Matrix:\n",
+            " [[2448    0    0    0    0]\n",
+            " [   0 2479    0    0    0]\n",
+            " [   0    0 2432    0    0]\n",
+            " [   0    0    0 2446    0]\n",
+            " [   0    0    0    0 2483]]\n",
+            "Decision Tree Confusion Matrix:\n",
+            " [[2448    0    0    0    0]\n",
+            " [   0 2479    0    0    0]\n",
+            " [   0    0 2432    0    0]\n",
+            " [   0    0    0 2446    0]\n",
+            " [   0    0    0    0 2483]]\n",
+            "Logistic Regression Confusion Matrix:\n",
+            " [[2448    0    0    0    0]\n",
+            " [   0 2479    0    0    0]\n",
+            " [   0    0 2432    0    0]\n",
+            " [   0    0    0 2446    0]\n",
+            " [   0    0    0    0 2483]]\n",
+            "K-Nearest Neighbors Confusion Matrix:\n",
+            " [[2448    0    0    0    0]\n",
+            " [   0 2479    0    0    0]\n",
+            " [   0    0 2432    0    0]\n",
+            " [   0    0    0 2446    0]\n",
+            " [   0    0    0    0 2483]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a dictionary to store inference times for each model\n",
+        "import time\n",
+        "inference_times = {}\n",
+        "\n",
+        "for name, model in models.items():\n",
+        "    # Record the time taken for prediction\n",
+        "    start_time = time.time()\n",
+        "    model.predict(X_test_selected_scaled)\n",
+        "    end_time = time.time()\n",
+        "    inference_times[name] = end_time - start_time\n",
+        "\n",
+        "# Find the model with the minimum inference time\n",
+        "best_model_name = min(inference_times, key=inference_times.get)\n",
+        "print(f\"Best Model based on Inference Time: {best_model_name}\")\n",
+        "\n",
+        "# Retrieve the best model\n",
         "best_model = models[best_model_name]\n"
       ],
       "metadata": {
@@ -278,15 +349,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y4_yfr7etKbv",
-        "outputId": "b25d8b0c-610b-45e8-abd2-b0ede99c5e7d"
+        "outputId": "30180588-25b7-42ac-fe75-a4b45c931f8a"
       },
-      "execution_count": 6,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best Model: SVM\n"
+            "Best Model based on Inference Time: SVM\n"
           ]
         }
       ]
@@ -341,15 +412,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wbav0KrdtS5G",
-        "outputId": "d401967f-cf46-4f27-fc71-21eaf34f189e"
+        "outputId": "38963b90-f18c-4842-970c-3ceb1ad99e10"
       },
-      "execution_count": 7,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The diagnosis based on symptoms is: Normal\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+            "  warnings.warn(\n"
           ]
         }
       ]
@@ -363,7 +442,7 @@
       "metadata": {
         "id": "K6szNuYwwsG7"
       },
-      "execution_count": 8,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -424,7 +503,7 @@
       "metadata": {
         "id": "a0UWOAWixEew"
       },
-      "execution_count": 9,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -440,7 +519,7 @@
       "metadata": {
         "id": "Rafa93itxHuh"
       },
-      "execution_count": 10,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -470,9 +549,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R9x53NtaxWSj",
-        "outputId": "1e78c7ae-84c4-449f-8d51-85c2b3797916"
+        "outputId": "91bd50cc-c9e9-4ce3-c057-96730e598843"
       },
-      "execution_count": 11,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,6 +811,19 @@
             "\n",
             "[40 rows x 23 columns]\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-133-5cb3e87615dc>:16: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+            "  feature_df.replace({\"Yes\": 1, \"No\": 0}, inplace=True)\n",
+            "<ipython-input-133-5cb3e87615dc>:16: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  feature_df.replace({\"Yes\": 1, \"No\": 0}, inplace=True)\n"
+          ]
         }
       ]
     },
@@ -751,9 +843,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ncepAU8p15Es",
-        "outputId": "7062d7d1-d451-4c45-d79c-6f615f297087"
+        "outputId": "1f5ea4fc-2fb5-4a05-8890-56a417a06b9b"
       },
-      "execution_count": 12,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,6 +1146,18 @@
             "39       Normal  \n",
             "\n",
             "[40 rows x 24 columns]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-134-73b82e1cfc6f>:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  feature_df['Predictions'] = predictions\n"
           ]
         }
       ]
