--- a/PSY_INS.ipynb
+++ b/PSY_INS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfh4M5n7NNhjY96JvA7AKl",
+      "authorship_tag": "ABX9TyOZnrgkczptV0AXkX7cp/OV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 1,
       "metadata": {
         "id": "f7-pwE8dr2jb"
       },
@@ -101,18 +101,10 @@
           "height": 1000
         },
         "id": "ZfyciiNhsPSQ",
-        "outputId": "532f2ec6-7692-4e87-fd28-ab196798c6f0"
+        "outputId": "7fba8d04-82a4-4e3c-a555-8f0dcf4ddf66"
       },
-      "execution_count": 78,
+      "execution_count": 2,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-78-caeaaf10cef1>:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-            "  X = data.drop('Disorder', axis=1).replace({'yes': 1, 'no': 0}).infer_objects()\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -169,9 +161,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JPRh-70qsYok",
-        "outputId": "55e2124d-7d7b-426d-aa57-d836c0ee88b1"
+        "outputId": "2bda6a50-ee75-47f8-8af8-a7297ea2ea16"
       },
-      "execution_count": 79,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +192,7 @@
         "    'K-Nearest Neighbors': KNeighborsClassifier(),\n",
         "}\n",
         "for name, model in models.items():\n",
-        "    model.fit(X_train_selected_scaled, y_train)  # Use the selected features (X_train_selected)\n",
+        "    model.fit(X_train_selected_scaled, y_train)\n",
         "    print(f\"{name} model trained.\")\n"
       ],
       "metadata": {
@@ -208,9 +200,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SKCrSIb2scIj",
-        "outputId": "e94c9d5c-ce84-40be-af9f-bf74fe30af08"
+        "outputId": "b9e01178-6578-4e02-95fd-3adc03e6d512"
       },
-      "execution_count": 125,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,15 +234,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JDNbf6QptG1s",
-        "outputId": "ddcaf8fa-dcc3-4cc0-8cba-3746cee23254"
+        "outputId": "eb416359-832b-4cda-ffab-c5c1f02f10f9"
       },
-      "execution_count": 111,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Linear SVC Performance:\n",
+            "SVM Performance:\n",
             "Accuracy: 1.0\n",
             "Precision: 1.0\n",
             "Recall: 1.0\n",
@@ -287,9 +279,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RHUU_CvUk4Wp",
-        "outputId": "d4e67ffd-f165-48d6-d9bd-2130348c8e17"
+        "outputId": "3f0efbf1-40ee-4837-fad2-4b933f5be2f9"
       },
-      "execution_count": 107,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,12 +318,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create a dictionary to store inference times for each model\n",
         "import time\n",
         "inference_times = {}\n",
         "\n",
         "for name, model in models.items():\n",
-        "    # Record the time taken for prediction\n",
         "    start_time = time.time()\n",
         "    model.predict(X_test_selected_scaled)\n",
         "    end_time = time.time()\n",
@@ -349,9 +339,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y4_yfr7etKbv",
-        "outputId": "30180588-25b7-42ac-fe75-a4b45c931f8a"
+        "outputId": "e9a9fd12-8bf5-4c30-d464-6178616cbba8"
       },
-      "execution_count": 127,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +360,6 @@
         "# Define the features used during training (selected features from the model)\n",
         "selected_features = X_train_selected_scaled.columns.tolist()\n",
         "\n",
-        "# Sample input for prediction with some keys missing\n",
         "new_input = {\n",
         "    \"feeling.nervous\": \"no\",\n",
         "    \"panic\": \"no\",\n",
@@ -412,23 +401,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wbav0KrdtS5G",
-        "outputId": "38963b90-f18c-4842-970c-3ceb1ad99e10"
+        "outputId": "4e16cea0-8d3b-483b-abdc-bb07197348d3"
       },
-      "execution_count": 128,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The diagnosis based on symptoms is: Normal\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
-            "  warnings.warn(\n"
           ]
         }
       ]
@@ -442,7 +423,7 @@
       "metadata": {
         "id": "K6szNuYwwsG7"
       },
-      "execution_count": 129,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -455,9 +436,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_hbkiu3XxAVh",
-        "outputId": "ea93560e-41d2-4c07-bb8e-7f525cc3fd5f"
+        "outputId": "97e8376b-2c5d-431f-84a0-ff7130bcbcb6"
       },
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +461,7 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (2.2.3)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.0.0->requests-oauthlib>=0.7.0->google-auth-oauthlib>=0.4.1->gspread) (2024.8.30)\n",
             "Downloading gspread-6.1.4-py3-none-any.whl (57 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: gspread\n",
             "  Attempting uninstall: gspread\n",
             "    Found existing installation: gspread 6.0.2\n",
@@ -503,7 +484,7 @@
       "metadata": {
         "id": "a0UWOAWixEew"
       },
-      "execution_count": 130,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -519,7 +500,7 @@
       "metadata": {
         "id": "Rafa93itxHuh"
       },
-      "execution_count": 131,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -549,9 +530,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R9x53NtaxWSj",
-        "outputId": "91bd50cc-c9e9-4ce3-c057-96730e598843"
+        "outputId": "9cbdacb8-4795-4687-c149-75e9cc11bbdf"
       },
-      "execution_count": 133,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -811,19 +792,6 @@
             "\n",
             "[40 rows x 23 columns]\n"
           ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-133-5cb3e87615dc>:16: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-            "  feature_df.replace({\"Yes\": 1, \"No\": 0}, inplace=True)\n",
-            "<ipython-input-133-5cb3e87615dc>:16: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  feature_df.replace({\"Yes\": 1, \"No\": 0}, inplace=True)\n"
-          ]
         }
       ]
     },
@@ -843,9 +811,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ncepAU8p15Es",
-        "outputId": "1f5ea4fc-2fb5-4a05-8890-56a417a06b9b"
+        "outputId": "3e5c2224-fd5b-49eb-87db-73ee236882e0"
       },
-      "execution_count": 134,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,18 +1115,6 @@
             "\n",
             "[40 rows x 24 columns]\n"
           ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-134-73b82e1cfc6f>:4: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  feature_df['Predictions'] = predictions\n"
-          ]
         }
       ]
     },
@@ -1177,9 +1133,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-roL2YXC42va",
-        "outputId": "bf8f9075-229d-4003-9e3d-9b1044b55a7c"
+        "outputId": "d8b5e005-419b-4cc7-a4f0-f0e2d3d84505"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1193,7 +1149,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 16
         }
       ]
     }
